# Cohort_AIE4

./: .gitignore  S1.ipynb  S2.ipynb  requirements.txt
Week 1/Day 2/: Assignment_Pythonic_RAG_Assignment.ipynb  Pythonic_RAG_Assignment.ipynb
Week 2/Day 2/: Assignment_Introduction_to_LangChain_v0_2_0_and_LCEL_LangChain_Powered_RAG.ipynb  LangSmith_and_Evaluation.ipynb
Week 3/Day 1/: Introduction_to_LangGraph_Assignment_Version.ipynb
Week 3/Day 2/: Multi_Agent_RAG_LangGraph.ipynb  app.py  extending_context_window_llama_3_docs.pkl
Week 4/Day 1/: RAGAS_SDG.ipynb  testset.csv
Week 4/Day 2/: Evaluation_of_RAG_using_Ragas_Assignment_Notebook.ipynb  base_rag_chain_results.pkl  contextual_compression_RAG_response_dataset.pkl  semantic_chunking_retriever_rag_results.pkl  test_groundtruths.pkl  test_questions.pkl
Week 5/Day 1/: Fine_tuning_Embedding_Models_for_RAG_Assignment_Notebook.ipynb  test_dataset.jsonl  training_dataset.jsonl  val_dataset.jsonl
Week 5/Day 2/: Fine_tuning_Llama_3_1_8B_Instruct_for_Summarization.ipynb
Week 7/Day 1/: DSPy_Advanced_Prompt_Engineering_+_RAG_Assignment.ipynb
Week 8/Day 1/: Prototyping_LangChain_Application_with_Production_Minded_Changes_Assignment.ipynb
Week 8/Day 2/: Open_Source_RAG_Leveraging_Hugging_Face_Endpoints_through_LangChain.ipynb
Week 9/LangServe/my-app/: README.md  pyproject.toml
Week 9/LangServe/my-app/app/: server.py
midterm/: AIE4_midterm_submission.ipynb  written_report.ipynb
midterm/app/: Dockerfile  app.py  requirements.txt
midterm/deploy/: Dockerfile  app.py  app2.py
midterm/modules/: rag_chains.py  (+3 more)
(+61 files in other folders)
