[tool.poetry]
name = "rag_on_prem"
version = "0.1.0"
description = "Retrieval-Augmented Generation on-premises (AIE4 Week 9)"
authors = ["Jet Taekyo Lee <jetleee.1888@gmail.com>"]
readme = "README.md"
packages = [
    { include = "app" },
]

[tool.poetry.dependencies]
python = "^3.11"
uvicorn = "^0.23.2"
langserve = {extras = ["server"], version = ">=0.0.30"}
pydantic = "^2.9.2"


[tool.poetry.group.dev.dependencies]
langchain-cli = ">=0.0.15"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
